# BBB_Backup

./: .bashrc  .gitignore  .gitmodules  DebianPackages.sh  LinuxBootProxy.sh  ROS_Mint_Installation.sh  Registers  ResizePartitionLive.txt  RubyEnvironment
ArmElf2Asm/: CMakeLists.txt  main.cpp
ArmElf2Asm/include/: elf_object.h
ArmElf2Asm/source/: elf_object.cpp
Blender/: KeyMap_2.77a.py  KeyMap_2.78c.py  ui_pie_menus_unofficial.py
CMakeKernelModule/: CMakeExample.txt  CMakeLists.txt  KernelBuildTools.cmake
Cloud9/: setup.sh
Events/: CMakeLists.txt  README.md
Events/Demo/: AdvancedCommands.cpp  CommandDemo.cpp  EventHandlerDemo.cpp  ObjectDemo.cpp
Events/Include/: EventArgs.h  EventCommand.h  EventHandler.h  FunctionCommand.h  Object.h
ExeUnArch/: CMakeLists.txt  README.md  main.cpp
ExeUnArch/Include/: Archiver.h  Directory.h  File.h  Filesystem.h  SystemExceptions.h  XZ.h  cstypes.h
ExeUnArch/Source/: Archiver.cpp  Directory.cpp  File.cpp  Filesystem.cpp  XZ.cpp
Hydrophone Triangulation/: Proto 4 Hydrophones.sln
Hydrophone Triangulation/Hydrophones/: ADCEmulator.cs  Arduino.cs  Bone.cs  Hydrophones.csproj
Hydrophone Triangulation/Hydrophones/Properties/: AssemblyInfo.cs
Hydrophone Triangulation/UnitTestProject/: ArduinoTest.cs  BoneTest.cs  EmulatorTest.cs  UnitTestProject.csproj
Hydrophone Triangulation/UnitTestProject/Properties/: AssemblyInfo.cs
Hydrophone Triangulation/UserInterface/: Canvas.cs  Program.cs  UserInterface.csproj  Window.Designer.cs  Window.cs
Hydrophone Triangulation/UserInterface/Properties/: AssemblyInfo.cs
MPI/: setup.sh
MediaWiki/: LocalSettings.php  README.txt
MediaWiki/CppReference2/: gitinfo.json  package-lock.json  package.json  skin.json  version
MediaWiki/CppReference2/include/: SkinCppRef2.php  SkinUnreal.php
MediaWiki/CppReference2/resources/: screen-common.less  screen-content.less  screen-desktop.less
MediaWiki/CppReference2/templates/: footer.mustache  header.mustache  skin.mustache
NFS/: setup-client.sh  setup.sh
ReactNativeDjinni/: README.md  helloworld.djinni  nix_run_djinni.sh
ReactNativeDjinni/ReactApp/: CMakeLists.txt  MyNativeObject.js  README.md  index.android.js  index.ios.js  package.json
ReactNativeDjinni/ReactApp/App/Containers/: App.js
ReactNativeDjinni/ReactApp/android/app/: build.gradle
ReactNativeDjinni/ReactApp/android/app/src/main/java/com/reactapp/: MainApplication.java  MyNativeObject.java  MyNativeReactPackage.java
ReactNativeDjinni/ReactApp/android/gradle/wrapper/: gradle-wrapper.properties
ReactNativeDjinni/ReactApp/ios/ReactApp/: AppDelegate.m
ReactNativeDjinni/ReactApp/ios/ReactApp.xcodeproj/: project.pbxproj
ReactNativeDjinni/ReactApp/ios/ReactAppTests/: ReactAppTests.m
ReactNativeDjinni/android_project/HelloWorld/app/: CMakeLists.txt  build.gradle  proguard-rules.pro
ReactNativeDjinni/android_project/HelloWorld/app/src/androidTest/java/com/mycompany/helloworld/: ExampleInstrumentedTest.java
ReactNativeDjinni/android_project/HelloWorld/app/src/main/: AndroidManifest.xml
ReactNativeDjinni/android_project/HelloWorld/app/src/main/cpp/: native-lib.cpp
ReactNativeDjinni/android_project/HelloWorld/app/src/main/java/com/mycompany/helloworld/: MainActivity.java
ReactNativeDjinni/android_project/HelloWorld/app/src/main/res/layout/: activity_main.xml
ReactNativeDjinni/android_project/HelloWorld/app/src/test/java/com/mycompany/helloworld/: ExampleUnitTest.java
ReactNativeDjinni/android_project/HelloWorld/gradle/wrapper/: gradle-wrapper.properties
ReactNativeDjinni/cpp_project/: CMakeLists.txt  main.cpp
ReactNativeDjinni/djinni-src/cpp/: hello_world.hpp
ReactNativeDjinni/djinni-src/java/com/mycompany/helloworld/: HelloWorld.java
ReactNativeDjinni/djinni-src/jni/: NativeHelloWorld.cpp
ReactNativeDjinni/djinni-src/objc/: HWHelloWorld.h
ReactNativeDjinni/src/cpp/: hello_world_impl.cpp  hello_world_impl.hpp
RoboSub/: BMP085.cpp  BMP085.h  HMC5883L.cpp  HMC5883L.h  I2C.cpp  I2C.h  I2C_Const.h  IMU_Const.h  MPU6050.cpp  MPU6050.h  PWM.cpp  PWM.h  PWM_Const.h  Registry.cpp  Registry.h
Sockets/: CMakeLists.txt  README.md
Sockets/Demo/: mainclient.cpp  mainserver.cpp
Sockets/Include/: CrossPlatformSockets.h  Sockets.h  TcpClient.h  TcpServer.h
Sockets/Source/: Sockets.cpp  TcpClient.cpp  TcpServer.cpp
UnrealEngine/: 2DRendering.md
WebGLServer/: hardware.js  index.js  messenger.js  package.json  routes.js
WebGLServer/static/: main.css
WebGLServer/static/js/: app.js
WebGLServer/static/js/modules/: game.js  module.js
WebGLServer/static/js/renderers/: CanvasRenderer.js  Projector.js
WebGLServer/views/: home.hbs
WebGLServer/views/layouts/: main.hbs
WebRTC/: generate_webrtc_sdk.sh
workspace/: Linux-From-Scratch.sh  pid.js
workspace/AdvancedBoneMemory/: Makefile  main.c  mindgem.c  mindgem.h  testbench.cpp
workspace/SocketServer/src/: BinaryUtils.cpp  BinaryUtils.h  SocketServer.cpp  ThrusterControl.cpp  ThrusterControl.h
workspace/SocketThreads/: IConnectable.h  ServerA.cpp  ServerA.h  SocketHost.cpp  SocketHost.h  SocketServer.cpp  SocketServer.h  TcpStream.cpp  TcpStream.h  main.cpp
workspace/SocketThreads/NODE/: client.js  exit.js  server.js  test_host.js  test_sub.js
