CMAKE_MINIMUM_REQUIRED(VERSION 3.8.0)
PROJECT(armelf2asm)

SET(CMAKE_CXX_STANDARD 11)
INCLUDE_DIRECTORIES(Include opcodes)

FILE(GLOB_RECURSE OPCODE_CFILES "opcodes/*.c")
FILE(GLOB_RECURSE OPCODE_CXXFILES "opcodes/*.cpp")
ADD_LIBRARY(opcodes ${OPCODE_CFILES} ${OPCODE_CXXFILES})
TARGET_COMPILE_DEFINITIONS(opcodes PUBLIC ARCH_arm)

FILE(GLOB_RECURSE ELF2ASM_FILES "source/*.cpp")
ADD_EXECUTABLE(${PROJECT_NAME} ${ELF2ASM_FILES} "main.cpp")
TARGET_LINK_LIBRARIES(${PROJECT_NAME} opcodes)
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PUBLIC "include")
